--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %}
-<h1>Add New Book</h1>
+<h1>Add New Product</h1>
 
 <form method="POST">
   {% csrf_token %}
