Merubah html main agar sesuai konteks

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -26,7 +26,7 @@
 <table class = tabel>
     <tr>
       <th>Name</th>
-      <th>Page</th>
+      <th>Price</th>
       <th>Description</th>
     </tr>
 
