--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -14,11 +14,11 @@
       {% include "card_info.html" with title='Class' value=class %}
     </div>
     <div class="w-full px-6  absolute top-[44px] left-0 z-20 hidden md:flex">
-      <div class="w-full min-h-4 bg-indigo-700">
+      <div class="w-full min-h-4 bg-blue-400">
       </div>
     </div>
     <div class="h-full w-full py-6  absolute top-0 left-0 z-20 md:hidden flex ">
-      <div class="h-full min-w-4 bg-indigo-700 mx-auto">
+      <div class="h-full min-w-4 bg-blue-400 mx-auto">
       </div>
     </div>
 </div>
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div class="flex justify-end mb-6">
-        <a href="{% url 'main:create_product' %}" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
+        <a href="{% url 'main:create_product' %}" class="bg-blue-600 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
             Add New Product
         </a>
     </div>
