--- a/main/templates/product_card.html
+++ b/main/templates/product_card.html
@@ -1,35 +1,38 @@
 <div class="relative break-inside-avoid">
-    <div class="absolute top-2 z-10 left-1/2 -translate-x-1/2 flex items-center -space-x-2">
-      <div class="w-[3rem] h-8 bg-gray-200 rounded-md opacity-80 -rotate-90"></div>
-      <div class="w-[3rem] h-8 bg-gray-200 rounded-md opacity-80 -rotate-90"></div>
+    <a href="#" class="group relative block h-64 sm:h-80 lg:h-96">
+  <span class="absolute inset-0 border-2 border-dashed border-black"></span>
+
+  <div
+    class="relative flex h-full transform items-end border-2 border-black bg-white transition-transform group-hover:-translate-x-2 group-hover:-translate-y-2"
+  >
+    <div
+      class="p-4 !pt-0 transition-opacity group-hover:absolute group-hover:opacity-0 sm:p-6 lg:p-8"
+    >
+      
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+        />
+      
+
+      <h2 class="mt-4 text-xl font-medium sm:text-2xl">{{product.name}}</h2>
     </div>
-    <div class="relative top-5 bg-indigo-100 shadow-md rounded-lg mb-6 break-inside-avoid flex flex-col border-2 border-indigo-300 transform rotate-1 hover:rotate-0 transition-transform duration-300">
-      <div class="bg-indigo-200 text-gray-800 p-4 rounded-t-lg border-b-2 border-indigo-300">
-        <h3 class="font-bold text-xl mb-2">{{ product.name }}</h3>
-        <p class="text-gray-600">{{product.description}}</p>
-      </div>
-      <div class="p-4">
-        <p class="font-semibold text-lg mb-2">Product</p> 
-        <p class="text-gray-700 mb-2">
-          <span class="bg-[linear-gradient(to_bottom,transparent_0%,transparent_calc(100%_-_1px),#CDC1FF_calc(100%_-_1px))] bg-[length:100%_1.5rem] pb-1">{{mood_entry.feelings}}</span>
-        </p>
-        <div class="mt-4">
-          <p class="text-gray-700 font-semibold mb-2">Intensity</p>
-          <div class="relative pt-1">
-            <div class="flex mb-2 items-center justify-between">
-              <div>
-                <span class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-indigo-600 bg-indigo-200">
-                  {% if product.price > 10 %}10+{% else %}{{product.price}}{% endif %}
-                </span>
-              </div>
-            </div>
-            <div class="overflow-hidden h-2 mb-4 text-xs flex rounded bg-indigo-200">
-              <div style="width:{% if product.price > 10 %}100{% else %}{{product.price}}0{% endif %}" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-indigo-500"></div>
-            </div>
-          </div>
-        </div>
-      </div>
+
+    <div
+      class="absolute p-4 opacity-0 transition-opacity group-hover:relative group-hover:opacity-100 sm:p-6 lg:p-8"
+    >
+      <h3 class="mt-4 text-xl font-medium sm:text-2xl">{{product.name}}</h3>
+
+      <p class="mt-4 text-sm sm:text-base">
+        {{product.description}}
+      </p>
+
+      <p class="mt-8 font-bold">{{product.price}}</p>
     </div>
+  </div>
+</a>
     <div class="absolute top-0 -right-4 flex space-x-1">
       <a href="{% url 'main:edit_product' product.pk %}" class="bg-yellow-500 hover:bg-yellow-600 text-white rounded-full p-2 transition duration-300 shadow-md">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9" viewBox="0 0 20 20" fill="currentColor">
