--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,13 +1,13 @@
-<nav class="bg-indigo-600 shadow-lg fixed top-0 left-0 z-40 w-screen">
+<nav class="bg-white shadow-lg fixed top-0 left-0 z-40 w-screen">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between h-16">
       <div class="flex items-center">
-        <h1 class="text-2xl font-bold text-center text-white">Gege Shop</h1>
+        <h1 class="text-2xl font-bold text-center text-teal-300">Gege Shop</h1>
       </div>
       <div class="hidden md:flex items-center">
         {% if user.is_authenticated %}
-          <span class="text-gray-300 mr-4">Welcome, {{ user.username }}</span>
-          <a href="{% url 'main:logout' %}" class="text-center bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded transition duration-300">
+          <span class="text-teal-400 mr-4">Welcome, {{ user.username }}</span>
+          <a href="{% url 'main:logout' %}" class="text-center bg-white hover:bg-gray-300 text-red-200 font-bold py-2 px-4 rounded transition duration-300">
             Logout
           </a>
         {% else %}
@@ -21,7 +21,7 @@
       </div>
       <div class="md:hidden flex items-center">
         <button class="mobile-menu-button">
-          <svg class="w-6 h-6 text-white" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
+          <svg class="w-6 h-6 text-black" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
             <path d="M4 6h16M4 12h16M4 18h16"></path>
           </svg>
         </button>
@@ -32,7 +32,7 @@
   <div class="mobile-menu hidden md:hidden  px-4 w-full md:max-w-full">
     <div class="pt-2 pb-3 space-y-1 mx-auto">
       {% if user.is_authenticated %}
-        <span class="block text-gray-300 px-3 py-2">Welcome, {{ user.username }}</span>
+        <span class="block text-cyan-300 px-3 py-2">Welcome, {{ user.username }}</span>
         <a href="{% url 'main:logout' %}" class="block text-center bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded transition duration-300">
           Logout
         </a>
