--- a/static/css/global.css
+++ b/static/css/global.css
@@ -6,8 +6,8 @@
 }
 .form-style form input:focus, form textarea:focus, form select:focus {
     outline: none;
-    border-color: #3d0abd;
-    box-shadow: 0 0 0 3px #674ea7;
+    border-color: #7eb0ed;
+    box-shadow: 0 0 0 3px #7eb0ed;
 }
 @keyframes shine {
     0% { background-position: -200% 0; }
