Menambahkan autentikasi untuk flutter

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -22,32 +22,42 @@
       <div class="h-full min-w-4 bg-blue-400 mx-auto">
       </div>
     </div>
-</div>
-    <div class="px-3 mb-4">
-      <div class="flex rounded-md items-center bg-indigo-600 py-2 px-4 w-fit">
-        <h1 class="text-white text-center">Last Login: {{last_login}}</h1>
-      </div>
+  </div>
+  <div class="px-3 mb-4">
+    <div class="flex rounded-md items-center bg-indigo-600 py-2 px-4 w-fit">
+      <h1 class="text-white text-center">Last Login: {{last_login}}</h1>
     </div>
-    <div class="flex justify-end mb-6">
-        <a href="{% url 'main:create_product' %}" class="bg-blue-600 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
-            Add New Product
-        </a>
-        <button data-modal-target="crudModal" data-modal-toggle="crudModal" class="btn bg-indigo-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105" onclick="showModal();">
-          Add New Product by AJAX
-        </button>
-    </div>
-    
-    <div id="product_card"></div>
-  <div id="crudModal" tabindex="-1" aria-hidden="true" class="hidden fixed inset-0 z-50 w-full flex items-center justify-center bg-gray-800 bg-opacity-50 overflow-x-hidden overflow-y-auto transition-opacity duration-300 ease-out">
-    <div id="crudModalContent" class="relative bg-white rounded-lg shadow-lg w-5/6 sm:w-3/4 md:w-1/2 lg:w-1/3 mx-4 sm:mx-0 transform scale-95 opacity-0 transition-transform transition-opacity duration-300 ease-out">
+  </div>
+  <div class="flex justify-end mb-6">
+    <a href="{% url 'main:create_product' %}"
+      class="bg-blue-600 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
+      Add New Product
+    </a>
+    <button data-modal-target="crudModal" data-modal-toggle="crudModal"
+      class="btn bg-indigo-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105"
+      onclick="showModal();">
+      Add New Product by AJAX
+    </button>
+  </div>
+
+  <div id="product_card"></div>
+  <div id="crudModal" tabindex="-1" aria-hidden="true"
+    class="hidden fixed inset-0 z-50 w-full flex items-center justify-center bg-gray-800 bg-opacity-50 overflow-x-hidden overflow-y-auto transition-opacity duration-300 ease-out">
+    <div id="crudModalContent"
+      class="relative bg-white rounded-lg shadow-lg w-5/6 sm:w-3/4 md:w-1/2 lg:w-1/3 mx-4 sm:mx-0 transform scale-95 opacity-0 transition-transform transition-opacity duration-300 ease-out">
       <!-- Modal header -->
       <div class="flex items-center justify-between p-4 border-b rounded-t">
         <h3 class="text-xl font-semibold text-gray-900">
           Add New Product
         </h3>
-        <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center" id="closeModalBtn">
-          <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+        <button type="button"
+          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center"
+          id="closeModalBtn">
+          <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+              clip-rule="evenodd"></path>
           </svg>
           <span class="sr-only">Close modal</span>
         </button>
@@ -57,29 +67,37 @@
         <form id="ProductForm">
           <div class="mb-4">
             <label for="name" class="block text-sm font-medium text-gray-700">name</label>
-            <input type="text" id="name" name="name" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter your name" required>
+            <input type="text" id="name" name="name"
+              class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700"
+              placeholder="Enter your name" required>
           </div>
           <div class="mb-4">
             <label for="description" class="block text-sm font-medium text-gray-700">Description</label>
-            <textarea id="description" name="description" rows="3" class="mt-1 block w-full h-52 resize-none border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="What is the product description" required></textarea>
+            <textarea id="description" name="description" rows="3"
+              class="mt-1 block w-full h-52 resize-none border border-gray-300 rounded-md p-2 hover:border-indigo-700"
+              placeholder="What is the product description" required></textarea>
           </div>
           <div class="mb-4">
             <label for="price" class="block text-sm font-medium text-gray-700">Price</label>
-            <input type="number" id="price" name="price" min="1000" max="10000000000" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" required>
+            <input type="number" id="price" name="price" min="1000" max="10000000000"
+              class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" required>
           </div>
         </form>
       </div>
       <!-- Modal footer -->
-      <div class="flex flex-col space-y-2 md:flex-row md:space-y-0 md:space-x-2 p-6 border-t border-gray-200 rounded-b justify-center md:justify-end">
-        <button type="button" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg" id="cancelButton">Cancel</button>
-        <button type="submit" id="submitProduct" form="ProductForm" class="bg-indigo-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg">Save</button>
+      <div
+        class="flex flex-col space-y-2 md:flex-row md:space-y-0 md:space-x-2 p-6 border-t border-gray-200 rounded-b justify-center md:justify-end">
+        <button type="button" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg"
+          id="cancelButton">Cancel</button>
+        <button type="submit" id="submitProduct" form="ProductForm"
+          class="bg-indigo-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg">Save</button>
       </div>
     </div>
   </div>
 </div>
 <script>
-  async function getProductEntries(){
-      return fetch("{% url 'main:show_json' %}").then((res) => res.json())
+  async function getProductEntries() {
+    return fetch("{% url 'main:show_json' %}").then((res) => res.json())
   }
   async function refreshProductEntries() {
     console.log()
@@ -90,8 +108,8 @@
     let classNameString = "";
 
     if (productEntries.length === 0) {
-        classNameString = "flex flex-col items-center justify-center min-h-[24rem] p-6";
-        htmlString = `
+      classNameString = "flex flex-col items-center justify-center min-h-[24rem] p-6";
+      htmlString = `
             <div class="flex flex-col items-center justify-center min-h-[24rem] p-6">
                 <img src="{% static 'image/sedih-banget.png' %}" alt="Sad face" class="w-32 h-32 mb-4"/>
                 <p class="text-center text-gray-600 mt-4">Belum ada data produk pada Gege Shop.</p>
@@ -99,11 +117,11 @@
         `;
     }
     else {
-        classNameString = "columns-1 sm:columns-2 lg:columns-3 gap-6 space-y-6 w-full"
-        productEntries.forEach((item) => {
-            const name = DOMPurify.sanitize(item.fields.name);
-            const description = DOMPurify.sanitize(item.fields.description);
-            htmlString += `
+      classNameString = "columns-1 sm:columns-2 lg:columns-3 gap-6 space-y-6 w-full"
+      productEntries.forEach((item) => {
+        const name = DOMPurify.sanitize(item.fields.name);
+        const description = DOMPurify.sanitize(item.fields.description);
+        htmlString += `
             <div class="relative break-inside-avoid">
     <a href="#" class="group relative block h-64 sm:h-80 lg:h-96">
   <span class="absolute inset-0 border-2 border-dashed border-black"></span>
@@ -153,37 +171,37 @@
     </div>
   </div>
             `;
-        });
+      });
     }
     document.getElementById("product_card").className = classNameString;
     document.getElementById("product_card").innerHTML = htmlString;
-}
-refreshProductEntries();
+  }
+  refreshProductEntries();
 
-const modal = document.getElementById('crudModal');
+  const modal = document.getElementById('crudModal');
   const modalContent = document.getElementById('crudModalContent');
 
   function showModal() {
-      const modal = document.getElementById('crudModal');
-      const modalContent = document.getElementById('crudModalContent');
+    const modal = document.getElementById('crudModal');
+    const modalContent = document.getElementById('crudModalContent');
 
-      modal.classList.remove('hidden'); 
-      setTimeout(() => {
-        modalContent.classList.remove('opacity-0', 'scale-95');
-        modalContent.classList.add('opacity-100', 'scale-100');
-      }, 50); 
+    modal.classList.remove('hidden');
+    setTimeout(() => {
+      modalContent.classList.remove('opacity-0', 'scale-95');
+      modalContent.classList.add('opacity-100', 'scale-100');
+    }, 50);
   }
 
   function hideModal() {
-      const modal = document.getElementById('crudModal');
-      const modalContent = document.getElementById('crudModalContent');
+    const modal = document.getElementById('crudModal');
+    const modalContent = document.getElementById('crudModalContent');
 
-      modalContent.classList.remove('opacity-100', 'scale-100');
-      modalContent.classList.add('opacity-0', 'scale-95');
+    modalContent.classList.remove('opacity-100', 'scale-100');
+    modalContent.classList.add('opacity-0', 'scale-95');
 
-      setTimeout(() => {
-        modal.classList.add('hidden');
-      }, 150); 
+    setTimeout(() => {
+      modal.classList.add('hidden');
+    }, 150);
   }
 
   document.getElementById("cancelButton").addEventListener("click", hideModal);
@@ -194,9 +212,9 @@ const modal = document.getElementById('crudModal');
       method: "POST",
       body: new FormData(document.querySelector('#ProductForm')),
     })
-    .then(response => refreshProductEntries())
+      .then(response => refreshProductEntries())
 
-    document.getElementById("ProductForm").reset(); 
+    document.getElementById("ProductForm").reset();
     document.querySelector("[data-modal-toggle='crudModal']").click();
 
     return false;
